# cmake_modules

./: .gitignore  CMakeLists.txt  Notes.md  README.md  package_api.cmake  unit_tests_module_usage_packager_api_expect_success_8-0.1.2-Linux.sh  unit_tests_module_usage_packager_api_expect_success_8-0.1.2-Linux.tar.Z  unit_tests_module_usage_packager_deb_expect_success_2-0.1.2-Linux.deb
cmake/: CMakeLists.txt  graphviz.cmake  modules.cmake  package_api.cmake
cmake/analysis/: CMakeLists.txt  analysis_api.cmake  clang-tidy_analysis.cmake  cppcheck_analysis.cmake  static_analysis.cmake
cmake/analysis/ClangTidyAnalysis/: CMakeLists.txt  ClangTidyAnalysisConfig.cmake  README.md
cmake/analysis/CppCheckAnalysis/: CppCheckAnalysisConfig.cmake  README.md
cmake/analysis/CppcheckAnalysis/: CMakeLists.txt
cmake/analysis/CppcheckAnalysis/tests/: CMakeLists.txt
cmake/codegen/: CMakeLists.txt
cmake/codegen/GitMetadata/: CMakeLists.txt  GitMetadataConfig.cmake  README.md
cmake/codegen/git/: git-metadata.cmake
cmake/cpack/: cpack.cmake  cpack_deb.cmake  cpack_rpm.cmake  cpack_tgz.cmake  cpack_zip.cmake
cmake/docugen/: CMakeLists.txt  docugen_api.cmake  graphviz.cmake
cmake/docugen/GraphvizDocugen/: CMakeLists.txt  GraphvizDocugenConfig.cmake  README.md
cmake/packaging/: CMakeLists.txt  cpack.cmake  cpack_deb.cmake  cpack_postinst.cmake  cpack_rpm.cmake  cpack_tgz.cmake  cpack_zip.cmake  package_api.cmake
cmake/packaging/PackageApi/: CMakeLists.txt  PackageApi-config.cmake  PackageApiConfig.cmake
cmake/packaging/PackageApi/tests/: stub.txt
cmake/packaging/PackageApi/tests/positive/1/: CMakeLists.txt
cmake/packaging/PackageApi/tests/positive/2/src/: bar.cpp
cmake/packaging/Packager/: CMakeLists.txt  PackagerConfig.cmake  README.md
cmake/packaging/PackagerApi/: CMakeLists.txt  PackagerApiConfig.cmake  README.md
cmake/packaging/PackagerApi/tests/: CMakeLists.txt
cmake/packaging/PackagerApi/tests/positive/1/: CMakeLists.txt
cmake/packaging/PackagerApi/tests/positive/1/include/: foo.hpp
cmake/packaging/PackagerApi/tests/positive/2/: CMakeLists.txt
cmake/packaging/PackagerConfig/: CMakeLists.txt
cmake/packaging/PackagerDeb/: CMakeLists.txt  PackagerDeb-config.cmake  PackagerDebConfig.cmake  README.md
cmake/packaging/PackagerRpm/: CMakeLists.txt  PackagerRpm-config.cmake  PackagerRpmConfig.cmake  README.md
cmake/packaging/PackagerTgz/: CMakeLists.txt  PackagerTgzConfig.cmake  README.md
cmake/packaging/PackagerZip/: CMakeLists.txt  PackagerZipConfig.cmake  README.md
cmake/packaging/cpack/: cpack_config.cmake  cpack_config_deb.cmake  cpack_config_postinst.cmake  cpack_config_tgz.cmake
cmake/profiling/: CMakeLists.txt  gcov_lcov_coverage.cmake  profiling_api.cmake
cmake/profiling/GnuCovCoverage/: CMakeLists.txt
cmake/profiling/GnuCoverage/: CMakeLists.txt  GnuCoverageConfig.cmake  README.md
cmake/testing/: CMakeLists.txt  testing_api.cmake
cmake/testing/GTestFramework/: CMakeLists.txt  GTestFrameworkConfig.cmake  README.md
cmake/testing/gtest/: gtest_setup.cmake
cmake/utils/: CMakeLists.txt  compile_defs.cmake  target_utils.cmake  utils_api.cmake
cmake/utils/CompileDefs/: CMakeLists.txt  CompileDefs-config.cmake
cmake/utils/CompileDefs/tests/positive/1/: CMakeLists.txt
cmake/utils/TargetUtils/: CMakeLists.txt  README.md  TargetUtilsConfig.cmake
cmake/utils/TargetUtils/tests/: CMakeLists.txt
cmake/utils/TargetUtils/tests/positive/1/: CMakeLists.txt
include/: bar.hpp
old_reference/packaging_tests/positive/usage/2/: CMakeLists.txt
scripts/: build-and-test.sh  build-docker.sh  package_api.install.sh  package_api.uninstall.sh  run-tests.sh
scripts/package_api/: package_api.install.sh  (+1 more)
src/: baz.cpp  foo.cpp  src2.cpp
tests/: Dockerfile
tests/PackagerApi/positive/2/: CMakeLists.txt
tests/unit_tests/PackagerApi/positive/1/: CMakeLists.txt
tests/unit_tests/find_package/git_metadata/: CMakeLists.txt
tests/unit_tests/module_usage/git_metadata/1/: CMakeLists.txt
tests/unit_tests/module_usage/git_metadata/2/: CMakeLists.txt
tests/unit_tests/module_usage/gnu_coverage/expect_failure/11/lib1/: CMakeLists.txt
tests/unit_tests/module_usage/gnu_coverage/expect_failure/11/lib2/: CMakeLists.txt
tests/unit_tests/module_usage/gnu_coverage/expect_failure/11/lib2/src/: lib2.cpp
tests/unit_tests/module_usage/gnu_coverage/expect_failure/12/lib1/: CMakeLists.txt
tests/unit_tests/module_usage/gnu_coverage/expect_failure/12/lib1/src/: lib1.cpp
tests/unit_tests/module_usage/gnu_coverage/expect_failure/12/lib2/: CMakeLists.txt
tests/unit_tests/module_usage/gnu_coverage/expect_failure/12/lib2/src/: lib2_test_runner.cpp
tests/unit_tests/module_usage/gnu_coverage/expect_failure/13/: CMakeLists.txt
tests/unit_tests/module_usage/gnu_coverage/expect_failure/13/lib1/: CMakeLists.txt  check-lib1-coverage.in.sh
tests/unit_tests/module_usage/gnu_coverage/expect_failure/13/lib2/: CMakeLists.txt  check-lib2-coverage.in.sh
tests/unit_tests/module_usage/gnu_coverage/expect_success/3/: CMakeLists.txt
tests/unit_tests/module_usage/gnu_coverage/expect_success/3/src/: test_runner.cpp
tests/unit_tests/module_usage/gnu_coverage/expect_success/5/lib1/: CMakeLists.txt
tests/unit_tests/module_usage/gnu_coverage/expect_success/5/lib1/include/: lib1.hpp
tests/unit_tests/module_usage/gnu_coverage/expect_success/5/lib1/src/: lib1_test_runner.cpp
tests/unit_tests/module_usage/gnu_coverage/expect_success/5/lib2/: CMakeLists.txt
tests/unit_tests/module_usage/gnu_coverage/expect_success/5/lib2/include/: lib2.hpp
tests/unit_tests/module_usage/graphviz_docugen/expect_success/8/: CMakeLists.txt
tests/unit_tests/module_usage/packager_api/expect_success/1/: CMakeLists.txt
tests/unit_tests/module_usage/packager_api/expect_success/14/: CMakeLists.txt
tests/unit_tests/module_usage/packager_api/expect_success/17/: CMakeLists.txt
tests/unit_tests/module_usage/packager_api/expect_success/17/src/: lib.cpp
tests/unit_tests/module_usage/testing/expect_success/3/: CMakeLists.txt
tests/unit_tests/packaging/positive/usage/1/: CMakeLists.txt
(+128 files in other folders)
