cmake_minimum_required(VERSION 3.21)

project(${MODULE_NAME}_find_package_required_test)
find_package(TargetUtils REQUIRED)

if(NOT (CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR))
    add_test(
        NAME ${PROJECT_NAME}
        COMMAND ${CMAKE_COMMAND} -S ${CMAKE_CURRENT_SOURCE_DIR} -DCMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH}
    )
endif(NOT (CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR))